# ChatBot

./: .gitignore  .gitmodules  CMakeLists.txt  READEME_EN.md  README.md
include/: AES_Crypto.h  ChatBot.h  Configure.h  Downloader.h  ImGuiSpinners.h  Logger.h  Progress.hpp  Recorder.h  Script.h  StableDiffusion.h  Translate.h  VoiceToText.h  imfilebrowser.h  imgui_markdown.h  pch.h  stb_image.h  utils.h
include/Impls/: Bots.h  ChatGPT_Impl.h  Claude_Impl.h  CustomRule_Impl.h  Gemini_Impl.h  LLama_Impl.h
sample/: Application.cpp  Application.h  CMakeLists.txt  RCa05832  SystemRole.h  encrypted_systemrole.h  encrypted_systemrole_ex.h  main.cpp  vcpkg-configuration.json  vcpkg.json
sample/Resources/: Chatbot.manifest  Info.aps  Info.plist  Info.rc  RCa15684  app.manifest  config.yaml  dll_search_paths.props  icon.icns
sample/Resources/Plugins/: Plugin.lua
sample/Resources/Plugins/Test/: Plugin.lua
sample/Resources/PythonScripts/: getInstalledPackage.py
sample/Resources/Resources/: Info.plist  RCa23412  RCa26988  icon.aps  resource.h
src/: AES_Crypto.cpp  ChatBot.cpp  Downloader.cpp  Logger.cpp  Recorder.cpp  Script.cpp  StableDiffusion.cpp  Translate.cpp  VoiceToText.cpp  base64.cpp  main.cpp  stb_image.cpp  stb_image_resize.cpp  utils.cpp
src/Impls/: ChatGPT_Impl.cpp  Claude_Impl.cpp  CustomRule_Impl.cpp  Gemini_Impl.cpp  LLama_Impl.cpp
